fixed comment box spacing in CSS

--- a/css/solar-comparison-styles.css
+++ b/css/solar-comparison-styles.css
@@ -81,3 +81,8 @@
     display: none;
   }
 }
+
+.elementor-shortcode br,
+.elementor-shortcode p {
+  display: none !important;
+}
